--- a/_drafts/00-working/0000-00-00-notepad.md
+++ b/_drafts/00-working/0000-00-00-notepad.md
@@ -1,115 +1,9 @@
 ---
 layout: post
-title:  "Future tense"
+title:  Notepad
 date:   2018-09-10 12:00:00 +0300
-categories: future
-permalink: future-tense
+categories: test
+permalink: notepad
 ---
 
-# Future Tense
-
-Будующее в английском языке может быть выражено тремя конструкциями:
-
-1. be going to + infinitive
-2. present continuous: be + verb + -ing
-3. will / shall + infinitive
-
-
-
-## be going to + infinitive
-
-**Be going to** используется для выражения:
-
-- future plans (планов)
-- intensions (намерений)
-- predictions (предсказаний)
-
-> **Future plans and intentions**
->
-> 1. My sister's going to adopt a child.
-> 2. Are you going to buy a new car or a second-hand one?
-
->**Predications**
->
->1. Barcelona are going to win. They're playing really well.
->2. Look at those black clouds. I think it's going to rain.
-
-- We use going to (NOT will / won't) when we have already decided to do something. ~~My sister will adopt a child.~~
-- We also use *going to* to make a predication about the future, especially when you can see or have some evidence (доказательства) (e. g. black clouds)
-
-
-
-## present continuous: be + verb + -ing
-
-**Present continuous** используется для обозначения каких-либо договоренностей в будующем (future arrangements).
-
-> **Future arrangements**
->
-> 1. Lorna and Jamie are getting married in October.
-> 2. We're meeting at 10.00 tomorrow in Jack's office.
-> 3. Jane's leaving on Friday and coming back next Tuesday.
-
-- We often use the present continuous for future arrangements.
-
-- There is very little difference between the present continuous and *going to* for future plans / arrangements, and often you can use either.
-
-  - *going* to show that you have made a decision.
-
-    We're going to get married next year.
-
-  - the present continuous emphasizes (подчеркивает) that you have made arrangements.
-
-    We're getting married on October 12th.
-
-- We often use the present continuous with verbs relating to travel arrangements, e.g. *go*, *come*, *arrive*, *leave*, etc. 
-
-  I'm going to Paris tomorrow and coming back on Tuesday.
-
-
-
-## will / shall + infinitive
-
-**Will / shall** используется для выражения
-
-- instant decisions (моментальный решений)
-- promises (обещаний)
-- offers (предложений)
-- predictions (предсказаний)
-- future facts (будующий фактов)
-- suggestions (предположений)
-
-> 1. I'll have the steak (стейк). (instant decision)
->
->    I won't tell anybody where you are. (promise)
->
->    I'll carry that bag for you. (offer)
->
->    You'll love New York! (prediction)
->
->    I'll be at home all afternoon. (future fact)
->
-> 2. Shall I help you with you homework? (offer)
->
->    Shall we eat out tonight? (suggestion)
-
-1. We use will / won't (NOT the present simple) for instant decisions, promises, offers, and suggestions. NOT ~~I carry that bag for you.~~
-   - We can also use will / won't for predictions, e.g. *I think Barcelona will win*, and to talk about facts, e.g. *The election will be on 1st March.*
-2. We use shall (NOT will) with I and we for offers and suggestions when they are questions.
-
-
-# Нюансы
-
-## Prediction
-
-Для предсказаний можно использовать *will* и *going to*. Если сущестуют доказательства (evidence) в настроящем, то предпочтительно использовать *going to* вместо *will*.
-
-> 1. That little boy's cycling too fast. He **is going to fall** (~~will fall~~) off.
-> 2. Med didn't study for the exam so she doesn't think she **is going to pass** (~~will pass~~) it.
-
-## Think
-
-Когда используется *think*, то предпочтительней использовать **will**.
-
-
-
-# [Test](https://docs.google.com/forms/d/e/1FAIpQLSdkQLfZaWmHpFbYLT2lt8DNyNzzSwi_p9_l3sZWYm185YHhnw/viewform)
+# Notepad
