TODO - Present Perfect VS Past Simple

--- a/_drafts/00-working/0000-00-00-notepad.md
+++ b/_drafts/00-working/0000-00-00-notepad.md
@@ -8,6 +8,36 @@ permalink: notepad
 
 # Notepad
 
+## Present Perfect VS Past Simple
+
+**14.3 (p.40) - Put the verb into the correct form, present perfect or past simple.**
+
+1. ‘What's Madrid like?' ‘I don't know I haven’t been (I / not / be) there.'
+
+2. When **I got** (I / get) home last night, **I was** (I / be) very tired and **I went** (I / go) straight to bed.
+
+3. a: **Have you seen** (you / see) Lisa recently?
+
+   b: Yes, **I saw** (I / saw) her a few days ago.
+
+4. I'm tired. **I didn't sleep** (I / not / sleep) well last night.
+5. The bus drivers were on strike last week. **There were** (there / be) no buses.
+6. Mr Lee **worked** (work) in a bank for 15 years. Then **he gave** (he / give) it up. Now he works as a gardener.
+7. Mary lives in Dublin **she has lived** (she / live) there all her life.
+8. a: **Did you go** (you / go) to the cinema last night?
+   b: Yes, but **it was** (it / be) a mistake. The film **was** (be) awful.
+9. My grandfather **died** (die) before I was born. . ...
+   **I never met** (I / never / meet) him.
+10. I don't know Karen's husband. **I've never met** (I / never / meet) him.
+11. It's nearly lunchtime, and **I haven't seen** (I / not / see) Martin all morning.
+    I wonder where he is.
+12. ‘Where do you live?' 'In Boston.'
+    'How Long **have you lived** (you / live) there?' 'Five years.'
+13. ‘Where **did you live** (you / live) before that?' ‘In Chicago.'
+    ‘And how Long **have you lived** (you / Live) in Chicago?' ‘Two years.'
+
+
+
 
 ## Phrase
 
