--- a/_drafts/00-working/0000-00-00-notepad.md
+++ b/_drafts/00-working/0000-00-00-notepad.md
@@ -10,75 +10,48 @@ permalink: notepad
 
 
 
-## Here is your topic for your extended speech
+## Read the situations and write sentences as shown in the example
 
-**Describe a website you often browse**
+1. Jack is driving a car, but he’s very nervous and not sure what to do.
+   You ask: Have you driven a car before?
+   He says: No, this is the first time I’ve driven a car.
+2. Ben is playing tennis. He's not good at it and he doesn't know the rules.
+   You ask: Have you ever played?
+   He says: No, this is the first I've played tennis.
+3. Sue is riding a horse. She doesn't look very confident or comfortable.
+   You ask: Have you ridden a horse before?
+   She says: No, this is the first time I've ridden a horse.
+4. Maria is in Japan. She has just arrived and it's very new for her.
+   You ask: Have you ever been in Japan.
+   She says: No, this is the first time I've been in Japan.
 
-You should say:
+**My examples**
 
-- ***what is it***
+1. Nick is going to snowboarding today with us.
 
-- ***how long have you been using it***
+   You ask: Have you ever snowboarded?
 
-- ***give details information about the website***
+   He says: No, this will be the first time I will go snowboarding.
 
-**and explain why you often browse this website.**
+2. Nick is cooking a fried egg, but the fried egg is burnt.
 
-**Here is a sample speech to use as a guide:**
+   You ask: Have you cooked a fried egg before?
 
-I will tell you what the website is, how long I’ve been using it, a bit about what is on it and why I visit it so often.
+   He says: No, this is the first time I've cooked a fried egg.
 
-The website is the BBC news website. You can find it at [ www.bbc.co.uk/news](https://mail.lanit-tercom.com/owa/redir.aspx?REF=RllO8Rji4GVgTFxZaX6IQ8naClCgTFUcqHIXJkFBYiP_RwYNVhbXCAFodHRwOi8vd3d3LmJiYy5jby51ay9uZXdz) but I just have it as a favourite on my toolbar. I am a complete BBC junkie! I visit the website several times a day if I can, and have been using it for as long as I can remember. Possibly for as long as the website has been in existence but definitely for the past ten years or more.
+3. Nick is running 10 km with us, but he isn't sure that he's ready.
 
-The BBC news website is massive. It contains rolling headlines of breaking news, and from the landing page, you can jump to sections on different types of news categories. For example, there are tabs for world news; health issues; environmental reports; education; sports; education and science as well as entertainment and arts stories. You can read just text-based articles illustrated with a few pictures – which is my preferred way of accessing news and information – or you can opt to see news film or audio clips. I think the website is really comprehensive and easy to use too.
+   You ask: Have you run 10 km before?
 
-The BBC news website, for me, is a one-stop location for all current affairs and news items. I really like that I can see the headlines of breaking news almost instantaneously, but it also includes more thoughtful reporting. Detailed online articles with considered analysis about global or local events.  I can also find out what the weather forecast is – always handy in the UK where it can change so quickly, plus I like to be able to keep an eye on what is happening locally to me in Sheffield where I live. I also trust the BBC website to give balanced reporting,  I think it has journalistic integrity, so I feel if I read it every day, I will have a good perspective on what is going on in the world, and enough information to come to my own conclusions on current affairs across the globe. The only downside of the website is that I find it can be a bit addictive! Because it is updated frequently it is tempting to keep going back and having another look if there is some running news item that I am following. It can lead me to procrastinate when I am supposed to be working, but I tell myself it is important to keep up to date with what is going on in the world, even though I know that really, it wouldn’t hurt to limit myself to news ‘fix’ just a couple of times a day!
+   He says: No, this is the first time I've run 10 km.
 
 
 
-## Google
 
-### I'll try to give detail information about website, how long I've been using it, and a bit about what is on it.
 
-The website is "Google". Of cause every user know about this website, **because it is comprehensive**. 
 
-I visit the website several times a day and have been using it for as long as I can remember. 
 
-Possibly for as long as the website has been in existence but definitely for the past ten years or more.
 
-### The main google feature is searching by Internet sites. 
-
-I prefer google to different search engine like Yandex, Rambler, Yahoo and others. Google returns the most relevant search result for me.
-
-### Also google gives free email account
-
-I don't remember exactly how long I've been using email from google, but yearly I used mail.ru and rambler and others. **I can say the google's email is very convenient**.
-
-### Google gives not only free email account
-
-This account integrates with
-
-- calendar
-- notes
-- tasks
-- contacts
-- and many different convenient tools!
-
-I use a lot of tools from google and it's awesome.
-
-### I use google-calendar on my PC
-
-and I integrated calendar with my mobile phone. It's very convenient to use from different devices.
-
-### Google has feature "Google translate"
-
-And I also use this sometimes when I want to check my spelling or when **I don't figure out something** in English sentence.
-
-### And of cause YouTube is owned to Google
-
-YouTube is different site, but it's also awesome. And then I have spare time, sometimes I watch YouTube.
-
-Google creates a lot of awesome services which I love use it.
 
 
 
