--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -8,6 +8,192 @@ permalink: notepad
 
 # Notepad
 
+## 06/08/2019 - Ronaldo
+
+**Story** 
+
+- There was the pre-season friendly game in soccer in Seoul South Korea between Juventus and Korea League Team. 
+- The main star should been Ronaldo. But he stayed on the subs bench.
+- Fans became angry when he made no sign of lacing up his boot.
+- Many fans at the game switched from chanting Ronaldo's name to chanting the name of his great rival Lionel Messi.
+- There were around 60 000 people on a stadium. And they were upset. 
+- After game more then 2000 fans sued Juventus for compensation.
+  - They was seeking compensation for ticket (70,000 won), for ticket commission fee (1,000 won), and also for mental anguish 1 million won.
+- Normally in such cases people will be refunded the price of the tickets. But as the lawyer said there was false advertising.
+- Many people were angry on Ronaldo and they said that Ronaldo betrayed them. They published about it on social media.
+- The real avid fans wanted to protect him, but they can't, given the situation.
+
+
+
+**After presenting the article, here are some questions for you to ask your classmates to see if they comprehended what you presented?**
+
+1. How many fans want to sue Juventus for compensation?
+   - Over 2000 fans
+2. What team was Juventus playing in South Korea?
+   - K League team
+3. What did Ronaldo sit on? 
+   - He stayed on the subs bench.
+4. What did Ronaldo not do to his boots?
+   - He didn't ever lace up his boots
+5. How many people went to see the game?
+   - 60 000 people
+6. Where is the law firm the soccer fans went to?
+   - South Korea -> Seoul
+7. How much compensation for "mental anguish" do the fans want?
+   - 1 million won each
+   - I checked It is around 820 dollars.
+8. What did a lawyer say fans would get back in normal cases?
+   - Normally in such cases the plaintiffs will be refunded the price of the tickets
+9. What did the lawyer say Juventus took advantage of?
+   - There was false advertising
+   - He said that Ronaldo didn't want to play.
+10. How did a lawyer say the fans felt about Ronaldo?
+    - Some of them want to protect him, but they can't, given the situation.
+
+
+
+
+
+**Here is the article for you to present:**
+
+**Summary**
+
+Football fans in **South Korea** are planning to sue Italian soccer giants Juventus and its star player Cristiano Ronaldo. **Over 2,000 fans** want compensation after Ronaldo failed to play in a pre-season friendly against an all-star **K League team**. Juventus signed a contract to play Ronaldo for 45 minutes of the game, but **he stayed on the subs bench and did not even lace up his soccer boots**. Many fans at the game switched from chanting Ronaldo's name to chanting the name of his great rival Lionel Messi. There were also boos around the stadium. The fans have also been voicing their anger at Ronaldo on social media. One wrote: "He betrayed the **60,000** audience and belittled us. I'm no longer a Ronaldo fan."
+
+
+
+**
+
+
+
+**Article**
+
+**Angry South Korean football fans are seeking compensation after Cristiano Ronaldo failed to take to the pitch during a Juventus pre-season friendly.**
+
+The superstar was contracted to play 45 minutes when the match against K League All Stars was announced, organisers say, but he stayed on the subs' bench.
+
+Fans became angry when he made no sign of lacing up his boots, even chanting the name of his rival Lionel Messi.
+
+Some have now reached out to Seoul law firm Myungan to file a lawsuit.
+
+They are seeking compensation of 70,000 won (£48.50; $59) per ticket, 1,000 won for the ticket commission fee, and 1m won each for compensation for "mental anguish".
+
+"Normally in such cases the plaintiffs will be refunded the price of the tickets, but I put this under a special case since the company, through false advertising, took advantage of the football star's fans," a lawyer from the firm told Reuters.
+
+"As for the mental anguish part, I'd like to say some of them are raucous fans, the real avid fans. So for them it is very painful because they love Ronaldo and want to protect him, but they can't, given the situation," he added.
+
+"For now we have two plaintiffs who sued the company, but I have been getting a lot of calls today and I assume there will be some 60,000 more."
+
+Robin Chang, CEO of The Fasta, the Korean agency which arranged the game, broke down in tears to broadcaster SBS and confirmed that the contract stipulated the Portuguese star appear for 45 minutes.
+
+However, Ms Chang said she only found out that the 34-year-old would not be making an appearance 10 minutes into the second half.
+
+"When I went to argue with (Pavel) Nedved, the vice president of Juventus, all he said was 'I also wish Ronaldo ran, but he doesn't want to. Sorry, there's nothing I can do.' I was so frustrated," she said.
+
+South Korea's professional football governing body, K League, said a letter of protest has been sent to the Italian champions for violating the contract.
+
+Many fans have been voicing their anger at Ronaldo on social media.
+
+"He betrayed the 60,000 audience and belittled us," a fan who attended the match posted on Instagram.
+
+"I'm no longer a Ronaldo fan."
+
+
+
+**Here are some key phrases you may use:**
+
+**WHAT ?** 
+
+**Introduction**
+
+- The article I’m going to talk to you about is 
+
+- I’m going to present to you an article about
+- This is an article about
+
+- What I will talk about today is an article about
+- The text raises a/the crucial question of … controversial issue (an) important topic old problem of …
+
+- The news article
+
+- deals with [+topic] 
+
+- that addresses the issue of [+topic] 
+
+- that takes a look at [+topic] (source)
+
+**WHERE?** (if applicable)
+
+- The setting is / was
+
+- The incident took place in
+- The event occurred in 
+
+**WHEN?**
+
+- The incident took place
+- The event occurred recently long ago during the... in the... at...
+
+**WHO?**
+
+- The writer talked about if a subject (person) is involved
+- The persons involved are / were … 
+
+**SUMMARY**
+
+- Basically the story is that of…
+- the heart of the problem is …
+- the core of the question is
+- the main issue is 
+
+**PARTS in the article or in your commentary**: 
+
+- The text falls into 3 parts
+- The text can be divided into 3 parts
+- It is possible to divide the article into 3 parts 
+- the second one … the last one … concerns … is centered on … is focused on … deals with … is based on
+
+**Analysis**
+
+- The writer wants to ... 
+  - intends to...
+  - show that… 
+  - suggest that… 
+  - indicate that... 
+  - make us feel that...
+  - make us realize that...
+  - make us understand that...
+  - the audience to understand...
+
+**Your opinion**
+
+- What I find the most 
+  - striking
+  - incredible
+  - interesting
+  - impressive 
+  - unpleasant in about this ....... is that ....... 
+- What strikes me the most in about this ..... is the fact the notion the idea that ..... 
+
+**GAP-FILLERS** 
+
+- Well .. 
+- You see .. 
+- Anyway to get back to the subject … 
+- What I'm trying to say is that 
+- What I’m trying to get at is that … 
+- What I mean to say is that … 
+
+**CONCLUSION** 
+
+- Drawing a conclusion about the document, we can say that! 
+
+- this is all based on 
+- it all revolves around 
+- what matters most throughout this text is 
+- what it actually boils down to is the fact that the notion that the idea that 
+- to sum up, in a word, in short, in brief, to conclude, in conclusion
+
 
 
 ## 01/08/2019
