--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -8,11 +8,34 @@ permalink: notepad
 
 # Notepad
 
+## 12/08/2019
+
+**Present Simple/Past Simple/Present Continuous/Present Perfect Continuous**
+
+- Past Simple - 
+  - I was on excursion in the Smolny Cathedral yesterday.
+  - I went up to the the viewing platform of the Smolny Cathedral, which is 50 meters above the ground.
+- Present Simple
+  - The Bell tower of the Smolny Cathedral is the highest viewing point in the city.
+  - The Bell tower of the Smolny Cathedral is higher then the colonnade of the St. Isaac’s Cathedral on 7 meters.
+- Present Continuous
+  - I am doing the homework and searching information about the Smolny Cathedral.
+  - The Smolny Cathedral is being repaired at the moment.
+- Present Perfect Continuous
+  - The Smolny Cathedral has been repairing since 2015.
+  - The business center "Naberazhnaya" opposite the Smolny Cathedral has been saling for 6 months for 600 million rubles.
+
+
+
+
+
 ## 06/08/2019 - Ronaldo
 
 **Story** 
 
-- There was the pre-season friendly game in soccer in Seoul South Korea between Juventus and Korea League Team. 
+- I’m going to present to you an article about game between Juventus and Korea League Team. 
+
+- There was the pre-season friendly game in soccer in Seoul South Korea between 
 - The main star should been Ronaldo. But he stayed on the subs bench.
 - Fans became angry when he made no sign of lacing up his boot.
 - Many fans at the game switched from chanting Ronaldo's name to chanting the name of his great rival Lionel Messi.
