--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -8,6 +8,147 @@ permalink: notepad
 
 # Notepad
 
+## 24/10/2019 - Karyn
+
+## [Doc](https://docs.google.com/document/d/1i-Xn5PG-ilJjjNoXMiFblwPUZr6AhFkdmoh1gmy00T8/edit)
+
+Video
+
+- It's 9:00 o'clock. 
+
+- Good morning everyone, thank you for coming today.
+- I would like to welcome everyone. We hear today for a accordingly strategic planning  meeting.
+- Our aim is review the pas codern perfomance.
+- And discuss the next year goals.
+- I'm Yulia and I'll be your facilitator today.
+- I'd like to review today's agenda ... with you.
+- We gonna talk first about "History of the organization"
+- But first I wanna welcome some of the  participants. Distinguish participants.
+- We have an 
+  - Executives
+  - Professor Andrey, he is a founder and president. (He might say 'hello', how are you? you know )
+  - We have Mr Igor F, he is CEO (си и о).
+  - Vladimir, he is Executive Director.
+  - Donnie T, Marketing Director
+  - Me, I am IT Director and I am in charge the EMEA region (Europe, Middle East, Asia)
+  - So, we have me, Yulia, I'm IT Director.
+  - Like to welcome Evgenia. She is a Business Director.
+  - Serzh is IT Director.
+  - Welcome everybody!
+  - Okay, and also I wanna tell you, that, we apologise.
+  - Vadim apologies, he is absent today.
+  - And also Andrey is absent, he is USA IT manager
+  - He could make it overhear. He could get a wisa of something for Andrey.
+  - We would like to send the apologies
+  - Okey, so let's get started it.
+  - Let me tell you a little bit about "a brief overview of our company"
+  - Then we gonna have next on the agenda
+    - Serzh will present "last quarter's strategic plan"
+    - from 9:30 to 10:15, Serzh, IT Director EMEA, he will do the presentation "last quarter's strategic plan" , 
+  - And next I will present from 10:15 to 
+  - Make sure you say the time!
+  - Then next step, we gonna have Yulia, myself, I will from 10:15 to 10:45. I'm gonna present "measures of success", mostly financial data from last quarter.
+  - Then next on the agenda, we gonna have much needed break, Okay? From 10:45 to 11:00.
+  - But  we wanna make sure that we get started on time on time. So we'll back on the meeting at 11:00.
+  - We gonna move to the next item.
+    - Evgenia will present 
+    - She's gonna present for us 3 issues.
+- Lastly before we break before lunch
+- We will have Every One. We'll be involved in this, from 11:30 to 12:15.
+- We will have open discussion.
+- And these thins that we we gonna discuss: ...
+- Then we gonna break for an hour for lunch 12:15 to 1:15.
+- This lunch will be located in a large conference room. 
+- So we don't have to leave the building.
+- After we'll come back from lunch
+- Donnie will launch into, from 1:15 to 2:15 "organization..."
+- Then Donnie will hand it over to Vlad..
+- Vladimir, from 2:15 to 3:00 o'clock,
+- He's gonna do his presentation "Competitors/External Analysis"
+- Oh, then we gonna have a much needed break, again!
+- That will be from 3 to 3:15.
+- Then we have two more sessions.
+  - We gonna have from 3:15 to 4:15, Igor. He will be discussing our "vision .."
+- And then finally, we'll have from 4:15 to 5:00.
+  - Igor will lead group discussion:...
+  - And how we gonna get there.
+- Then at the end of a day, from 5:00 to 5:30, we gonna have recap
+  - Yulia will be your facilitator
+  - We gonna have "questions/ any concerns and any parting thoughts"
+- And then will be the end of day ONE!
+- Oh, We'll have a lot to do today!
+- So, let's grab yourself some coffee.
+- And get started with first presenter Serzh.
+
+---
+
+## My speech
+
+### Greeting
+
+Good morning everyone, thank you for coming today. 
+
+Yesterday was excellent day, today we gonna have the third, the last day of our meeting.
+
+
+
+### Absent
+
+Okay, and also I wanna tell you, that 
+
+Donnie is absent today. He would like to send the apologies.
+
+Fortunately, he doesn't have a presentation today..
+
+Okay, so let's get started.
+
+
+
+### Agenda
+
+I'm Serzh and I'll be your facilitator today.
+
+I'd like to review today's agenda with you.
+
+We gonna talk first about "Strategy"
+
+- From 10:00 to 10:45, Evgenia will do the presentation.
+- She's gonna present 4 topics.
+
+After this, we gonna have much needed break, from 10:45 to 11 o'clock.
+
+But  we wanna make sure that we get started on time. 
+
+So we'll back on the meeting at 11:00.
+
+- And Andrei will present
+
+And then finally, we'll have from 11:30 Recap.
+
+- Yulia will be your facilitator
+- He gonna tell about 
+- We gonna have "questions/ any concerns and any parting thoughts"
+
+And then will be the end of third day
+
+And we'll close the meeting.
+
+
+
+### Start third day
+
+Okay, we'll have a lot to do today!
+
+So, let's grab yourself some coffee.
+
+And get started with first presenter Evgenia.
+
+
+
+
+
+
+
 ## 12/08/2019
 
 **Present Simple/Past Simple/Present Continuous/Present Perfect Continuous**
