--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -24,7 +24,7 @@ Video
 - I'd like to review today's agenda ... with you.
 - We gonna talk first about "History of the organization"
 - But first I wanna welcome some of the  participants. Distinguish participants.
-- We have an 
+- We have an
   - Executives
   - Professor Andrey, he is a founder and president. (He might say 'hello', how are you? you know )
   - We have Mr Igor F, he is CEO (си и о).
@@ -94,19 +94,21 @@ Yesterday was excellent day, today we gonna have the third, the last day of our 
 
 ### Absent
 
-Okay, and also I wanna tell you, that 
+Okay, and before we get started I wanna tell you, that 
 
-Donnie is absent today. He would like to send the apologies.
+Donnie is absent today. And Serzh is also absent, it's not me, it's different Serzh.
 
-Fortunately, he doesn't have a presentation today..
+They would like to send the apologies.
 
-Okay, so let's get started.
+Fortunately, they don't have a presentation today..
+
+Okay, so, now we can start.
 
 
 
 ### Agenda
 
-I'm Serzh and I'll be your facilitator today.
+As I said, I'm Serzh and I'll be your facilitator today.
 
 I'd like to review today's agenda with you.
 
@@ -117,17 +119,16 @@ We gonna talk first about "Strategy"
 
 After this, we gonna have much needed break, from 10:45 to 11 o'clock.
 
-But  we wanna make sure that we get started on time. 
+But we wanna make sure that we get started on time. 
 
-So we'll back on the meeting at 11:00.
+So we'll back on the meeting at 11 o'clock.
 
 - And Andrei will present
 
-And then finally, we'll have from 11:30 Recap.
+And then finally, we'll have Recap, from 11:30 .
 
-- Yulia will be your facilitator
-- He gonna tell about 
-- We gonna have "questions/ any concerns and any parting thoughts"
+- Igor will be your facilitator
+- He gonna tell about
 
 And then will be the end of third day
 
