--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -8,6 +8,94 @@ permalink: notepad
 
 # Notepad
 
+## 29/10/2019 - My speech 2
+
+### Greeting
+
+Good morning everyone, thank you for coming today. 
+
+As you know, I'm Serzh and I'll be your facilitator today.
+
+I'd like to review today's agenda with you.
+
+### Absent
+
+Okay, and before we get started I wanna tell you, that 
+
+Igor Frankel (Java Programmer) is absent today. 
+
+And Victor Manga (IT Manager) is also absent, he is sick.
+
+They would like to send the apologies.
+
+Okay, so, we can start now.
+
+### Agenda
+
+**9:00am-9:15am** - Welcome Announcements and news   
+
+- At first, we are going to talk about "Welcome Announcements and news" from 9am to 9:15
+- That is what we are doing now.
+
+**9:15am-9:30am** Recognition of staff - Employee of the month for his quick response to the Nabisco account - Tim Simmons
+
+- After this, from 9:15 to 9:30, Tim Simmons will present "Recognition of staff". 
+- It will be about "Employee of the month for his quick response to the Nabisco account"
+
+**9:30am-10:00am** Budget Status and planning - John Wicke-CFO
+
+- Next on the agenda, from 9:30 to 10 o'clock, John Wicke CFO will do presentation about "Budget status ang planning"
+
+**10:00am-10:30am** Project Updates Each manager to give a 5 minute update if you are behind schedule, on target or ahead of schedule
+
+- After then, from 10 o'clock to 10:30, each manger will present project updates! 
+- "if you are behind schedule, on target or ahead of schedule" and so on.
+- Please, try to get it done in 5 minutes, we have very tight schedule!
+
+**10:30am-10:45am** Break
+
+- Then next on the agenda, we gonna have much needed break, Okay? From 10:30 to 10:45.
+- Only 15 minutes. Be sure that you won't late and we can start on time.
+- So we'll back on the meeting at 10:45..
+- And Karissa Moorehouse (Agile Project Manager) will present "Agile Presentation", from 10:45 to 11:30.
+- She will tell about 4 topic:
+
+**10:45am-11:30am** Agile Presentation - Karissa Moorehouse - Agile Project Manager
+
+- A new way to evaluate project management 				
+
+- What did you do yesterday?
+
+- What will you work on tomorrow?
+
+- Do you have any obstacles?
+
+
+
+And then finally, we'll have "Action Items AOB", from 11:30 to 12 pm.
+
+We will discuss any other business questions..
+
+**11:30am-12:00pm** Action Items AOB (any other business)
+
+
+
+### Next meeting
+
+After than we will finish out meeting, and 
+
+the next meeting will be on 28 of November, this year, at 9:00 am in conference room D.
+
+### Start day
+
+Okay, we'll have a lot to do today!
+
+And get started with first presenter Tim Simmons.
+
+
+
+## Say about next and start Metting
+
 ## 24/10/2019 - Karyn
 
 ## [Doc](https://docs.google.com/document/d/1i-Xn5PG-ilJjjNoXMiFblwPUZr6AhFkdmoh1gmy00T8/edit)
