--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -8,6 +8,44 @@ permalink: notepad
 
 # Notepad
 
+# Karyn 
+
+- She lives in California.
+- The temperature is quite stable, and all summer was about 30-35 degrees.
+
+
+
+## Phrases
+
+- I am looking forward to seeing you on Thursday!
+- Have a great weekend!
+- 9 am - nine am sharp
+- My wife keeps grounded!
+- My internet is messing up today
+
+
+
+## Мои проблемы
+
+- Много `эм` и `уууу`.
+  - Change on
+    - You know..
+    - So..
+- Нужно говорить `more fluency`
+
+
+
+## Заметки
+
+- При пересказе не повторять слова
+- И использовать свои для передачи смысла, не нужно читать!
+
+
+
+
+
+
+
 ## 29/10/2019 - My speech 2
 
 ### Greeting
