--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -8,6 +8,24 @@ permalink: notepad
 
 # Notepad
 
+## WORKING ON IT
+
+- Clothes - [CLOZ]
+  - I went shopping for clothes *<u>([cloz] not [clovez])</u>* and got a jacket and some shorts.
+- [Author](https://www.youtube.com/watch?v=l4885Cf4CLs) - [ˈɔːθə]
+  - What does the author mean?
+- Очень много эээ, уммм
+  - you know... so...
+
+
+
+## Useful phrases
+
+- The holidays are just around the corner
+- It helps to be focused on ....effectivity.
+
+
+
 # Karyn 
 
 - She lives in California.
