--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -10,10 +10,11 @@ permalink: notepad
 
 ## WORKING ON IT
 
-- Clothes - [CLOZ]
+- Clothes - [kləʊðz] -> **[клоз]**
   - I went shopping for clothes *<u>([cloz] not [clovez])</u>* and got a jacket and some shorts.
-- [Author](https://www.youtube.com/watch?v=l4885Cf4CLs) - [ˈɔːθə]
+- [Author](https://www.youtube.com/watch?v=l4885Cf4CLs) - [ˈɔːθə] -> **[oфэ]**
   - What does the author mean?
+- Service - [ˈsɜː(r)vɪs] - **[сЁрвис]** not [cёрвайс]
 - Очень много эээ, уммм
   - you know... so...
 
