--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -63,6 +63,21 @@ permalink: notepad
 
 
 
+## 05/11/2019
+
+pop over there
+30 minutes
+Go over there
+drop in
+Drop by
+have some drinks
+Private keep people out
+gated communities
+
+---
+
+
+
 
 
 ## 29/10/2019 - My speech 2
