--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -15,6 +15,8 @@ permalink: notepad
 - [Author](https://www.youtube.com/watch?v=l4885Cf4CLs) - [ˈɔːθə] -> **[oфэ]**
   - What does the author mean?
 - Service - [ˈsɜː(r)vɪs] - **[сЁрвис]** not [cёрвайс]
+- Percentage - [pəˈsentɪdʒ], Percent - [pəˈsent]
+  - Не используется во множественной форме!
 - Очень много эээ, уммм
   - you know... so...
 
@@ -41,6 +43,36 @@ permalink: notepad
 - 9 am - nine am sharp
 - My wife keeps grounded!
 - My internet is messing up today
+- How is it spelt (spelled)?
+- I would treat anything he says with extreme caution!
+- We had a big argument but now it is time to clear the air - 
+- Golf isn't his cup of tea - Гольф не его конек.
+
+
+
+## Percentage vs percent
+
+> The rule for using *percent* and *percentage* is straightforward. The word *percent* (or the symbol %) accompanies a **specific number,** whereas the more general word *percentage* is used **without a number.**
+
+**Pronunciation** 
+
+Percentage - [pəˈsentɪdʒ]
+
+Percent - [pəˈsent]
+
+**Percent**
+
+- Fifteen percent of the control group responded to treatment with Drug A.
+- More than 95% of the participants who responded to the survey reported positive results.
+
+**Percentage**
+
+- A large percentage of the population has been exposed to rotavirus.
+- The percentage of the population exposed to rotavirus is between 70% and 75%.
+
+**Useful phrases**
+
+- I'm a hundred percent sure.
 
 
 
@@ -61,6 +93,25 @@ permalink: notepad
 
 
 
+## Phrases
+
+1. Put all your eggs in a basket
+
+
+
+### 06/11/2019 - Create 10 sentences
+
+1. There is still **abundant** food.
+2. Dashed **nuisance** that you have couldn't done it.
+3. Corporal punishment is **rampant** in schools and homes.
+4. I have an instinctive **aversion** to him.
+5. I'm a **wary** person, cautious by nature.
+6. Her **notorious** brother is in prison.
+7. I've got some **leftover** chicken or we could order pizza.
+8. Barry is so **nonchalant**.
+9. Careful, don't **jiggle** her.
+10. I think **joggling** is a good exercise.
+
 
 
 ## 05/11/2019
@@ -73,10 +124,6 @@ Drop by
 have some drinks
 Private keep people out
 gated communities
-
----
-
-
 
 
 
