--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -96,6 +96,30 @@ Percent - [pəˈsent]
 ## Phrases
 
 1. Put all your eggs in a basket
+2. I shouldn't have done it. (Я не должен был этого делать!)
+
+
+
+## Jogging vs Juggling vs Joggling
+
+- jog (jogging) - бегать трусцой
+- juggle (juggling) - жонглировать
+- Joggling - бег с жонглированием
+
+
+
+## 11/11/2019 - Create 10 sentences once more
+
+- We have **abundant** games, you can play one of them. 
+- Please, don't make such noise, I will have **nuisances**.
+- The current stamp of flu is **rampant**.
+- I have a strong **aversion** to snakes.
+- He is so **wary**, he thinks twice before to say.
+- He is **notorious** for his crimes in this region.
+- I am starving, I am going to eat the **leftover** pie.
+- His **nonchalant** manner infuriated me.
+- She is on swing, please, **jiggle** her.
+- joggling
 
 
 
