--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -17,6 +17,7 @@ permalink: notepad
 - Service - [ˈsɜː(r)vɪs] - **[сЁрвис]** not [cёрвайс]
 - Percentage - [pəˈsentɪdʒ], Percent - [pəˈsent]
   - Не используется во множественной форме!
+- Hear - [hɪə(r)] - **[хиə]**
 - Очень много эээ, уммм
   - you know... so...
 
@@ -26,6 +27,69 @@ permalink: notepad
 
 - The holidays are just around the corner
 - It helps to be focused on ....effectivity.
+- Straight to the point (Приступить сразу к делу)
+- How are you getting on? (Как поживаешь?)
+- Oh, maybe it's that (А может быть и так!)
+- I don't get it (Я не понимаю)
+- What's on at the cinema at the moment (Что идет в кино сейчас)
+- I have a business (У меня есть дело)
+- Oh, save us! (О, спаси нас!)
+
+
+
+## Weather
+
+## Saint-Petersburg
+
+- Temperature ranges from 30 to 34 degrees.
+- Vitamin D - luck of sunshine
+- многих людей бесит такая погода!
+
+### Atlanta
+
+- 17 -> 2 degrees.
+
+
+
+## 12/11/2019 - Small talk about Weekends
+
+Yes, I'm gonna go ~ going to go
+
+- What are you gonna do?
+- I picked up a new dress.
+- It fits like a glove - fits very well
+- cuter
+- bulls
+- To make an effort to participation it the confersation in English
+- куда удаерние? weekend? **wiːkˈend**
+- энтузиастикали
+- It was pouring this weekend! It was raining cats and dogs.
+- I was getting drenched! - Промок
+- I feel you!
+- I'm writing in response to your email.
+- I hope this email finds you well.
+- I would appeciate for you quick responce 
+
+**h/w - Написать [email](https://docs.google.com/document/d/1YOyUn3i-4yZgHC-ky9WjeSpoTV-u3_n-Iot8DwAVENU/edit)**
+
+
+
+
+
+
+
+
+
+## Decease
+
+- I have a sore throat
+- 
+
+
+
+## Mr, Ms, Miss
+
+
 
 
 
