--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -6,29 +6,53 @@ categories: test
 permalink: notepad
 ---
 
-# Notepad
+# NOTEPAD - COMMON
 
-## WORKING ON IT
+# WORKING 13.11 - 24.11
+
+## Pronunciation
 
 - Clothes - [kləʊðz] -> **[клоз]**
+  
   - I went shopping for clothes *<u>([cloz] not [clovez])</u>* and got a jacket and some shorts.
+  
 - [Author](https://www.youtube.com/watch?v=l4885Cf4CLs) - [ˈɔːθə] -> **[oфэ]**
+  
   - What does the author mean?
+  
 - Service - [ˈsɜː(r)vɪs] - **[сЁрвис]** not [cёрвайс]
+
+  - What do you know about customer service?
+
 - Percentage - [pəˈsentɪdʒ], Percent - [pəˈsent]
+  
+  - I'm a hundred percent sure!
   - Не используется во множественной форме!
+  
 - Hear - [hɪə(r)] - **[хиə]**
-- Очень много эээ, уммм
-  - you know... so...
+
+  - I don't hear you well!
+
+- Weekend - [**wiːkˈend**]
+
+  - How was your weekend?
+
+  
+
+## Phrases and word
+
+1. How are you getting on? (Как поживаешь?)
+2. It's very convenient for me
+3. Очень много эээ, уммм, Нужно говорить `more fluency`
+   - You know..
+   - So..
 
 
 
-## Useful phrases
+## ARCHIVE of Phrases
 
-- The holidays are just around the corner
 - It helps to be focused on ....effectivity.
 - Straight to the point (Приступить сразу к делу)
-- How are you getting on? (Как поживаешь?)
 - Oh, maybe it's that (А может быть и так!)
 - I don't get it (Я не понимаю)
 - What's on at the cinema at the moment (Что идет в кино сейчас)
@@ -37,73 +61,8 @@ permalink: notepad
 
 
 
-## Weather
-
-## Saint-Petersburg
-
-- Temperature ranges from 30 to 34 degrees.
-- Vitamin D - luck of sunshine
-- многих людей бесит такая погода!
-
-### Atlanta
-
-- 17 -> 2 degrees.
-
-
-
-## 12/11/2019 - Small talk about Weekends
-
-Yes, I'm gonna go ~ going to go
-
-- What are you gonna do?
-- I picked up a new dress.
-- It fits like a glove - fits very well
-- cuter
-- bulls
-- To make an effort to participation it the confersation in English
-- куда удаерние? weekend? **wiːkˈend**
-- энтузиастикали
-- It was pouring this weekend! It was raining cats and dogs.
-- I was getting drenched! - Промок
-- I feel you!
-- I'm writing in response to your email.
-- I hope this email finds you well.
-- I would appeciate for you quick responce 
-
-**h/w - Написать [email](https://docs.google.com/document/d/1YOyUn3i-4yZgHC-ky9WjeSpoTV-u3_n-Iot8DwAVENU/edit)**
-
-
-
-
-
-
-
-
-
-## Decease
-
-- I have a sore throat
-- 
-
-
-
-## Mr, Ms, Miss
-
-
-
-
-
-# Karyn 
-
-- She lives in California.
-- The temperature is quite stable, and all summer was about 30-35 degrees.
-
-
-
 ## Phrases
 
-- I am looking forward to seeing you on Thursday!
-- Have a great weekend!
 - 9 am - nine am sharp
 - My wife keeps grounded!
 - My internet is messing up today
@@ -111,6 +70,80 @@ Yes, I'm gonna go ~ going to go
 - I would treat anything he says with extreme caution!
 - We had a big argument but now it is time to clear the air - 
 - Golf isn't his cup of tea - Гольф не его конек.
+- Put all your eggs in a basket
+- I shouldn't have done it. (Я не должен был этого делать!)
+
+
+
+# SMALL TALKS
+
+## Pharses
+
+- I am looking forward to seeing you on Thursday!
+- Have a great weekend!
+- The holidays are just around the corner
+- I am dying to find out!
+
+## Karyn 
+
+- She lives in Atlanta (California).
+- The temperature is quite stable, and all summer was about 30-35 degrees.
+- Atlanta, 17 -> 2 degrees.
+
+## Weather
+
+### Saint-Petersburg
+
+- Temperature ranges from 30 to 34 degrees.
+- Vitamin D - luck of sunshine
+- многих людей бесит такая погода!
+
+### Decease
+
+- I have a sore throat
+
+
+
+
+
+# ARTICALS
+
+## Present Perfect VS Past Simple
+
+**14.3 (p.40) - Put the verb into the correct form, present perfect or past simple.**
+
+1. ‘What's Madrid like?' ‘I don't know I haven’t been (I / not / be) there.'
+
+2. When **I got** (I / get) home last night, **I was** (I / be) very tired and **I went** (I / go) straight to bed.
+
+3. a: **Have you seen** (you / see) Lisa recently?
+
+   b: Yes, **I saw** (I / saw) her a few days ago.
+
+4. I'm tired. **I didn't sleep** (I / not / sleep) well last night.
+
+5. The bus drivers were on strike last week. **There were** (there / be) no buses.
+
+6. Mr Lee **worked** (work) in a bank for 15 years. Then **he gave** (he / give) it up. Now he works as a gardener.
+
+7. Mary lives in Dublin **she has lived** (she / live) there all her life.
+
+8. a: **Did you go** (you / go) to the cinema last night?
+   b: Yes, but **it was** (it / be) a mistake. The film **was** (be) awful.
+
+9. My grandfather **died** (die) before I was born. . ...
+   **I never met** (I / never / meet) him.
+
+10. I don't know Karen's husband. **I've never met** (I / never / meet) him.
+
+11. It's nearly lunchtime, and **I haven't seen** (I / not / see) Martin all morning.
+    I wonder where he is.
+
+12. ‘Where do you live?' 'In Boston.'
+    'How Long **have you lived** (you / live) there?' 'Five years.'
+
+13. ‘Where **did you live** (you / live) before that?' ‘In Chicago.'
+    ‘And how Long **have you lived** (you / Live) in Chicago?' ‘Two years.'
 
 
 
@@ -140,30 +173,6 @@ Percent - [pəˈsent]
 
 
 
-## Мои проблемы
-
-- Много `эм` и `уууу`.
-  - Change on
-    - You know..
-    - So..
-- Нужно говорить `more fluency`
-
-
-
-## Заметки
-
-- При пересказе не повторять слова
-- И использовать свои для передачи смысла, не нужно читать!
-
-
-
-## Phrases
-
-1. Put all your eggs in a basket
-2. I shouldn't have done it. (Я не должен был этого делать!)
-
-
-
 ## Jogging vs Juggling vs Joggling
 
 - jog (jogging) - бегать трусцой
@@ -172,22 +181,107 @@ Percent - [pəˈsent]
 
 
 
-## 11/11/2019 - Create 10 sentences once more
-
-- We have **abundant** games, you can play one of them. 
-- Please, don't make such noise, I will have **nuisances**.
-- The current stamp of flu is **rampant**.
-- I have a strong **aversion** to snakes.
-- He is so **wary**, he thinks twice before to say.
-- He is **notorious** for his crimes in this region.
-- I am starving, I am going to eat the **leftover** pie.
-- His **nonchalant** manner infuriated me.
-- She is on swing, please, **jiggle** her.
-- joggling
+## Mr, Ms, Miss
 
 
 
-### 06/11/2019 - Create 10 sentences
+## Good practice
+
+- При пересказе не повторять слова
+- И использовать свои для передачи смысла, не нужно читать!
+
+
+
+# JOURNAL
+
+## 13/11/2019
+
+NOT CHECKED YET - Complete each question using a suitable verb.
+
+1. a : I'm looking for Paul. **Have you seen** him?
+
+   b : Yes, he was here a moment ago.
+
+2. a : Why **did you go** to bed so early Last night?
+
+   b : I was feeling very tired.
+
+3. a : Where **are you**?
+
+   b : Just to the shop at the end of the street. I'll be back in a few minutes.
+
+4. a : **Do you watch** TV every evening?
+
+   b: No, only if there's something special on.
+
+5. a : Your house is very beautiful. How long **have you lived** here?
+
+   b : Nearly ten years.
+
+6. a : How was your holiday? **Was it** a nice time?
+
+   b : Yes, thanks. It was great.
+
+7. a : **Have you seen** Sarah recently?
+
+   b : Yes, we had lunch together a few days ago.
+
+8. a : Can you describe the woman you saw? What **was she wearing?**
+
+   b : A red sweater and black jeans.
+
+9. a : I'm sorry to keep you waiting. **Have you been waiting** long?
+
+   b: No, only about ten minutes.
+
+10. a : How long **does it take** you to get to work in the morning?
+    b : Usually about 45 minutes. It depends on the traffic.
+
+11. a : **Have you ridden** a horse before?
+    b : No, this is the first time. I'm a little nervous.
+
+12. a : **Have you been** to the United States?
+
+    b : No, never, but I went to Canada a few years ago.
+
+    
+
+## 12/11/2019 - Small talk about Weekends
+
+Yes, I'm gonna go ~ going to go
+
+- What are you gonna do?
+- I picked up a new dress.
+- It fits like a glove - fits very well
+- cuter
+- bulls
+- To make an effort to participation it the confersation in English
+- куда удаерние? weekend? **wiːkˈend**
+- энтузиастикали
+- It was pouring this weekend! It was raining cats and dogs.
+- I was getting drenched! - Промок
+- I feel you!
+- I'm writing in response to your email.
+- I hope this email finds you well.
+- I would appeciate for you quick responce 
+
+**h/w - Написать [email](https://docs.google.com/document/d/1YOyUn3i-4yZgHC-ky9WjeSpoTV-u3_n-Iot8DwAVENU/edit)**
+
+
+
+
+
+
+
+## 07/11/2019
+
+- Point of view
+- Mind set
+- People from another country have different mind set.
+
+  
+
+## 06/11/2019 - Create 10 sentences
 
 1. There is still **abundant** food.
 2. Dashed **nuisance** that you have couldn't done it.
@@ -718,51 +812,10 @@ I use a lot of tools from google and it's awesome.
 
 and I integrated calendar with my mobile phone. It's very convenient to use from different devices.
 
-### Google has feature "Google translate"
-
-And I also use this sometimes when I want to check my spelling or when **I don't figure out something** in English sentence.
-
-### And of cause YouTube is owned to Google
-
-YouTube is different site, but it's also awesome. And then I have spare time, sometimes I watch YouTube.
-
-Google creates a lot of awesome services which I love use it.
-
-
-
-## 01/08/2019
-
-## Present Perfect VS Past Simple
-
-**14.3 (p.40) - Put the verb into the correct form, present perfect or past simple.**
-
-1. ‘What's Madrid like?' ‘I don't know I haven’t been (I / not / be) there.'
-
-2. When **I got** (I / get) home last night, **I was** (I / be) very tired and **I went** (I / go) straight to bed.
-
-3. a: **Have you seen** (you / see) Lisa recently?
-
-   b: Yes, **I saw** (I / saw) her a few days ago.
-
-4. I'm tired. **I didn't sleep** (I / not / sleep) well last night.
-5. The bus drivers were on strike last week. **There were** (there / be) no buses.
-6. Mr Lee **worked** (work) in a bank for 15 years. Then **he gave** (he / give) it up. Now he works as a gardener.
-7. Mary lives in Dublin **she has lived** (she / live) there all her life.
-8. a: **Did you go** (you / go) to the cinema last night?
-   b: Yes, but **it was** (it / be) a mistake. The film **was** (be) awful.
-9. My grandfather **died** (die) before I was born. . ...
-   **I never met** (I / never / meet) him.
-10. I don't know Karen's husband. **I've never met** (I / never / meet) him.
-11. It's nearly lunchtime, and **I haven't seen** (I / not / see) Martin all morning.
-    I wonder where he is.
-12. ‘Where do you live?' 'In Boston.'
-    'How Long **have you lived** (you / live) there?' 'Five years.'
-13. ‘Where **did you live** (you / live) before that?' ‘In Chicago.'
-    ‘And how Long **have you lived** (you / Live) in Chicago?' ‘Two years.'
+### 
 
 
 
 
-## Phrase
 
-I am dying to find out!
+
